# xr.mobile

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  deploy.sh  docker-compose-gh.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker.yaml  release-please.yaml
.k8s/: certificate.yaml  deployment.yaml  image-pull-secret.yaml  ingress.yaml  kustomization.yaml  middleware_traefik.yaml  namespace.yaml  service.yaml
app/models/: anagrafica.py  backoffice.py  cesti.py  device.py  device_user.py  documenti.py  inventario.py  raccolte.py  users_modules.py
app/routers/: anagrafica.py  backoffice.py  cesti.py  device.py  device_user.py  documenti.py  inventario.py  raccolte.py  users_modules.py
sandbox/: swagger.json
